# binavry

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  arch.py  insn.py  main.py  plugin.json  pyproject.toml  requirements.txt  view.py
binavry/: __init__.py  arch.py  insn.py
binavry/insns/: __init__.py  bit.py  ctrl.py  data.py  flow.py  logic.py
binavry/plugin/: __init__.py  arch.py  view.py
binavry/plugin/atpack/: __init__.py  atdf.py  atpack.py
insns/: __init__.py  bit.py  ctrl.py
